--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section class="faq">
       <h2>よくある質問</h2>
-      <img src="IMG_1936.jpeg" alt="ガッツの画像" class="turtle-image">
+      <img src="https://github.com/Hatayama-Megumi/Kametama01/blob/main/IMG_1936.jpeg?raw=true" alt="ガッツの画像" class="turtle-image">
       <details class="accordion">
         <summary>CB個体ですか？</summary>
         <p>はい、CB個体です。</p>
