--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <section class="profile">
       <h2>プロフィール</h2>
-      <img src="IMG_3020.jpeg" alt="ガッツの画像" class="turtle-image">
+      <img src="https://github.com/Hatayama-Megumi/Kametama01/blob/main/IMG_3020.jpeg?raw=true" alt="ガッツの画像" class="turtle-image">
       <dl>
         <dt>生年月日</dt>
         <dd>2020年4月8日</dd>
